First push of the python app

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 node {
     def application = "pythonapp"
-    def dockerhubaccountid = "nyukeit"
+    def dockerhubaccountid = "archanakaushish"
     stage('Clone repository') {
         checkout scm
     }
